--- a/mystyle/mystyle.css
+++ b/mystyle/mystyle.css
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Upload File to my Azure Blob</title>
-  <style>
-    body {
+body {
     margin: 0;
     padding: 0;
     background-color: #f3f4f6;
@@ -32,6 +26,12 @@ h3 {
     margin-bottom: 24px;
     color: #333;
 }
+
+h1 {
+    margin-bottom: 24px;
+    color: #333;
+}
+
 input[type="file"] {
     margin-bottom: 20px;
 }
@@ -50,17 +50,13 @@ button {
 button:hover {
     background-color: #1e40af;
 }
-  </style>
-</head>
-<body>
-    <div class="upload-container">
-    <h3>Upload a File to my blob storage</h3>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-      <input type="file" name="file" required />
-      <br />
-      <button type="submit">Upload</button>
-      <br/>
-    </form>
-  </div>
-</body>
-</html>
+
+a {
+    color: #0066cc;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
+}
